--- a/11.ipynb
+++ b/11.ipynb
@@ -65,6 +65,9 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
